build_errors.txt
cargo :     Checking ai-lib v0.4.0 (D:\rustapp\ai-lib)
所在位置 行:1 字符: 1
+ cargo check 2>&1 | Out-File -Encoding utf8 build_errors.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking ai...rustapp\ai-lib):Stri 
   ng) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused import: `OpenAiAdapter`
  --> src\client\provider_factory.rs:11:37
   |
11 |     GenericAdapter, MistralAdapter, OpenAiAdapter, PerplexityAdapter,
   |                                     ^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `Arc`
 --> src\registry\mod.rs:6:17
  |
6 | use std::sync::{Arc, RwLock};
  |                 ^^^

error[E0599]: no variant or associated item named `InvalidConfiguration` found for 
enum `types::error::AiLibError` in the current scope
   --> src\client\builder.rs:260:44
    |
260 |                     return Err(AiLibError::InvalidConfiguration(format!(
    |                                            ^^^^^^^^^^^^^^^^^^^^ variant or 
associated item not found in `AiLibError`
    |
   ::: src\types\error.rs:24:1
    |
24  | pub enum AiLibError {
    | ------------------- variant or associated item `InvalidConfiguration` not 
found for this enum

error[E0599]: no variant or associated item named `InvalidConfiguration` found for 
enum `types::error::AiLibError` in the current scope
   --> src\client\builder.rs:266:40
    |
266 |                 return Err(AiLibError::InvalidConfiguration(format!(
    |                                        ^^^^^^^^^^^^^^^^^^^^ variant or 
associated item not found in `AiLibError`
    |
   ::: src\types\error.rs:24:1
    |
24  | pub enum AiLibError {
    | ------------------- variant or associated item `InvalidConfiguration` not 
found for this enum

error[E0599]: no variant or associated item named `InvalidConfiguration` found for 
enum `types::error::AiLibError` in the current scope
   --> src\client\builder.rs:426:48
    |
426 |                         return Err(AiLibError::InvalidConfiguration(format!(
    |                                                ^^^^^^^^^^^^^^^^^^^^ variant 
or associated item not found in `AiLibError`
    |
   ::: src\types\error.rs:24:1
    |
24  | pub enum AiLibError {
    | ------------------- variant or associated item `InvalidConfiguration` not 
found for this enum

error[E0599]: no variant or associated item named `InvalidConfiguration` found for 
enum `types::error::AiLibError` in the current scope
   --> src\client\builder.rs:432:44
    |
432 |                     return Err(AiLibError::InvalidConfiguration(format!(
    |                                            ^^^^^^^^^^^^^^^^^^^^ variant or 
associated item not found in `AiLibError`
    |
   ::: src\types\error.rs:24:1
    |
24  | pub enum AiLibError {
    | ------------------- variant or associated item `InvalidConfiguration` not 
found for this enum

error[E0599]: no variant or associated item named `InvalidConfiguration` found for 
enum `types::error::AiLibError` in the current scope
  --> src\client\provider_factory.rs:41:44
   |
41 |                         .ok_or(AiLibError::InvalidConfiguration("Missing 
baseUrl".into()))?,
   |                                            ^^^^^^^^^^^^^^^^^^^^ variant or 
associated item not found in `AiLibError`
   |
  ::: src\types\error.rs:24:1
   |
24 | pub enum AiLibError {
   | ------------------- variant or associated item `InvalidConfiguration` not 
found for this enum

error[E0308]: mismatched types
  --> src\client\provider_factory.rs:80:58
   |
80 |                 |k, u| GeminiAdapter::new_with_overrides(Some(k), Some(u)),
   |                        --------------------------------- ^^^^^^^ expected 
`String`, found `Option<String>`
   |                        |
   |                        arguments to this function are incorrect
   |
   = note: expected struct `std::string::String`
                found enum `std::option::Option<std::string::String>`
note: associated function defined here
  --> src\provider\gemini.rs:75:12
   |
75 |     pub fn new_with_overrides(
   |            ^^^^^^^^^^^^^^^^^^
76 |         api_key: String,
   |         ---------------

error[E0308]: mismatched types
   --> src\client\provider_factory.rs:105:58
    |
105 |                 |k, u| CohereAdapter::new_with_overrides(Some(k), Some(u)),
    |                        --------------------------------- ^^^^^^^ expected 
`String`, found `Option<String>`
    |                        |
    |                        arguments to this function are incorrect
    |
    = note: expected struct `std::string::String`
                 found enum `std::option::Option<std::string::String>`
note: associated function defined here
   --> src\provider\cohere.rs:206:12
    |
206 |     pub fn new_with_overrides(
    |            ^^^^^^^^^^^^^^^^^^
207 |         api_key: String,
    |         ---------------

error[E0599]: no variant or associated item named `InvalidConfiguration` found for 
enum `types::error::AiLibError` in the current scope
   --> src\client\provider_factory.rs:117:40
    |
117 |                 return Err(AiLibError::InvalidConfiguration(format!(
    |                                        ^^^^^^^^^^^^^^^^^^^^ variant or 
associated item not found in `AiLibError`
    |
   ::: src\types\error.rs:24:1
    |
24  | pub enum AiLibError {
    | ------------------- variant or associated item `InvalidConfiguration` not 
found for this enum

error[E0599]: no variant or associated item named `InvalidConfiguration` found for 
enum `types::error::AiLibError` in the current scope
   --> src\client\provider_factory.rs:205:32
    |
205 |             .ok_or(AiLibError::InvalidConfiguration("Missing 
baseUrl".into()))?,
    |                                ^^^^^^^^^^^^^^^^^^^^ variant or associated 
item not found in `AiLibError`
    |
   ::: src\types\error.rs:24:1
    |
24  | pub enum AiLibError {
    | ------------------- variant or associated item `InvalidConfiguration` not 
found for this enum

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
warning: `ai-lib` (lib) generated 2 warnings
error: could not compile `ai-lib` (lib) due to 9 previous errors; 2 warnings emitted
